# csl-core

./: .gitignore  README.md  pyproject.toml
benchmarks/four_frontiers_prompt_vs_csl-core/: benchmark_call_log.json  benchmark_results.json  benchmark_run.py  benchmark_visualizer.py
chimera_core/: __init__.py  cli.py
chimera_core/mcp/: __init__.py  server.py
chimera_core/mcp/examples/: age_verification.csl  agent_tool_guard.csl  banking_guard.csl  dao_treasury_guard.csl  hello_world.csl  tla_demo.csl  tla_demo_violation.csl
chimera_core/plugins/: __init__.py  llamaindex.py
docs/: agent-universe-integration.md
examples/: run_examples.py
examples/community/: defi_slippage_guard.csl  devops_deploy_guard.csl  game_npc_resource.csl  mcp_tool_trust_guard.csl  pediatric_safety_guard.csl  web3_bridge_transaction_limit.csl
examples/integrations/: llamaindex_agent_demo.py
quickstart/: 03_langchain_template.py
tests/integration/: test_langchain.py  test_llamaindex.py
vscode-extension/csl/: CHANGELOG.md  README.md  package.json  test.csl  vsc-extension-quickstart.md
vscode-extension/csl/syntaxes/: csl.tmLanguage.json
